--- a/coming-soon.html
+++ b/coming-soon.html
@@ -10,6 +10,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/sports-vision-fe0d13.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/rtl.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -17,12 +18,33 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <script src="js/language-switcher.js" type="text/javascript"></script>
+  <script src="js/arabic-translations.js" type="text/javascript"></script>
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+        api_key: 'wg_951e1f37be4f7f34083b855332ae37da6'
+    });
+  </script>
+  
+
+  <style>
+    /* Hide Weglot default widget */
+    .weglot-container, 
+    .country-selector,
+    .wg-drop {
+      display: none !important;
+      visibility: hidden !important;
+      opacity: 0 !important;
+      pointer-events: none !important;
+    }
+  </style>
 </head>
 <body>
   <div class="coming-soon-page-wrap">
     <div class="coming-soon-wrapper"><img src="images/SPORT-CLUB.png" loading="lazy" alt="Logo" height="30" class="image-52">
-      <h1 class="coming-soon-heading">Something great is coming soon</h1>
-      <p class="coming-soon-paragraph">You can subscribe us to get noticed when our website is ready.</p>
+      <h1 data-text-content="Something great is coming soon">Something great is coming soon</h1>
+      <p data-text-content="You can subscribe us to get noticed when our website is ready." class="coming-soon-paragraph">You can subscribe us to get noticed when our website is ready.</p>
       <div class="coming-soon-form-main w-form">
         <form id="email-form" name="email-form" data-name="Email Form" method="get" class="coming-soon-form" data-wf-page-id="6822c54974afef131c86bff8" data-wf-element-id="77c65c3e-1fa7-9a1e-fa8b-3c975f0ecf15"><input class="coming-soon-input w-input" maxlength="256" name="email" data-name="Email" placeholder="Your email" type="email" id="email" required=""><input type="submit" data-wait="Please wait..." class="primary-button w-button" value="Subscribe"></form>
         <div class="success-message w-form-done">
@@ -36,5 +58,7 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6822c54974afef131c86bfa5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="js/update-nav.js" type="text/javascript"></script>
+  <script src="js/stagewise-integration.js" type="text/javascript"></script>
 </body>
 </html>
