--- a/awards.html
+++ b/awards.html
@@ -202,7 +202,7 @@
     <div class="w-layout-blockcontainer base-container w-container">
       <div data-w-id="0596bfb9-cb1d-a552-5684-86d465da1e7b" style="opacity:0" class="achievement-wrapper">
         <h2 id="w-node-_0596bfb9-cb1d-a552-5684-86d465da1e7c-1c86bff6">Club achievement make the history<span class="brand-color-span">.</span></h2>
-        <p id="w-node-_0596bfb9-cb1d-a552-5684-86d465da1e80-1c86bff6" class="paragraph-large achievement-paragraph">Undefeated has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
+        <p id="w-node-_0596bfb9-cb1d-a552-5684-86d465da1e80-1c86bff6" class="paragraph-large achievement-paragraph">Sports Vision has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
       </div>
     </div>
     <div class="w-layout-blockcontainer full-width-container awards-container w-container">
@@ -334,5 +334,10 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/update-nav.js" type="text/javascript"></script>
   <script src="js/stagewise-integration.js" type="text/javascript"></script>
+  <script src="js/brand-name-replacer.js" type="text/javascript"></script>
+
+  <script src="js/hide-menu-items.js" type="text/javascript"></script>
+
+
 </body>
 </html>
