--- a/home-1.html
+++ b/home-1.html
@@ -11,6 +11,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/sports-vision-fe0d13.webflow.css" rel="stylesheet" type="text/css">
   <link href="css/rtl.css" rel="stylesheet" type="text/css">
+  <link href="css/live-matches.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -43,10 +44,10 @@
 <body>
   <div data-animation="over-left" class="navbar-absolute about-us-navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1">
     <div class="nav-menu-wrapper">
-      <a href="home-1.html" aria-current="page" class="brand w-nav-brand w--current"><img loading="lazy" height="30" alt="" src="images/SPORT-CLUB_1.png" class="logo-sport-club"></a>
+      <a href="home-1.html" aria-current="page" class="brand w-nav-brand w--current"><img loading="lazy"    src="images/aavision/Group 16.png" class="logo-sport-club"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <div class="tablet-menu">
-          <a href="home-1.html" aria-current="page" class="brand-tablet w-nav-brand w--current"><img loading="lazy" height="30" alt="Logo" src="images/SPORT-CLUB.png" class="logo-sport-club"></a>
+          <a href="home-1.html" aria-current="page" class="brand-tablet w-nav-brand w--current"><img loading="lazy" alt="Logo" src="images/SPORT-CLUB.png" class="logo-sport-club"></a>
           <div class="close-menu-button w-nav-button"><img loading="lazy" src="images/close-btn.svg" alt="Close icon" class="nav-close-icon"></div>
         </div>
         <div class="menu-wrap">
@@ -205,10 +206,10 @@
             <div class="banner-paragraph-wrapper">
               <div class="rectangle left"></div>
               <div class="rectangle left-bottom"></div>
-              <h5 data-w-id="5998ab59-83e0-e40b-802a-03f437f53a0b" style="opacity:0" class="h5-green">Welcome to Undefeated</h5>
+              <h5 data-w-id="5998ab59-83e0-e40b-802a-03f437f53a0b" style="opacity:0" class="h5-green">Welcome to Sports Vision</h5>
               <p data-w-id="5ed21f33-2263-7e25-0081-f000c0155879" style="opacity:0" class="paragraph-large banner-paragraph">We strive to inspire and empower individuals through the world of sports. We aim to motivate, encourage, and foster a community of relentless achievers.</p>
               <div data-w-id="e0eff2b3-15dc-a058-c239-eb1dc7fe0443" style="opacity:0" class="banner-buttons-wrapper">
-                <a href="tickets.html" class="primary-button w-button">Book Tickets</a>
+              <!--  <a href="tickets.html" class="primary-button w-button">Book Tickets</a> -->
                 <a href="about-us.html" class="secondary-button w-button">About Company</a>
               </div>
             </div>
@@ -283,7 +284,7 @@
               <p class="uppercase-paragraph white-paragraph">Seconds</p>
             </div>
           </div>
-          <a data-w-id="19d5331d-b163-d39f-f00a-2e008cd615d5" style="opacity:0" href="tickets.html" class="primary-button w-button">Book Tickets</a>
+         <!-- <a data-w-id="19d5331d-b163-d39f-f00a-2e008cd615d5" style="opacity:0" href="tickets.html" class="primary-button w-button">Book Tickets</a> -->
         </div>
         <div id="w-node-b16b92fb-bf00-dcb8-25c8-436fa75fbdff-1c86bff2" class="timer-image second-image"></div>
       </div>
@@ -293,7 +294,7 @@
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div data-w-id="9e6f4900-86b9-8241-b057-1a0893834744" style="opacity:0" class="featured-matches-title-wrapper">
         <h2>Future Matches</h2>
-        <a href="schedule.html" class="primary-button w-button">View All Matches</a>
+      <!--  <a  href="schedule.html" class="primary-button w-button">View All Matches</a>-->
       </div>
       <div class="matches-table">
         <div data-w-id="4af92ccc-3862-99d6-7366-b5dcc7b7d804" style="opacity:0" class="next-match-collection-list-wrapper w-dyn-list">
@@ -359,6 +360,7 @@
       </div>
     </div>
   </section>
+  <!--
   <section class="result-section">
     <div class="w-layout-blockcontainer base-container w-container">
       <div data-w-id="1787bd76-4c02-602e-2985-4332421aed5b" style="opacity:0" class="section-title-wrapper home-1-result-title-wrapper">
@@ -400,7 +402,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
   <section class="home-1-lineup-section">
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div class="full-width-row-wrapper home-1-lineup-row-wrapper">
@@ -523,15 +525,15 @@
         <div class="podcast-table">
           <div id="w-node-_5d436e0f-6e85-cc07-51e9-824539edf68b-1c86bff2" class="rectangle left-bottom"></div>
           <div class="podcasts-text-wrapper">
-            <p class="uppercase-paragraph">listen our latest podcasts</p>
-            <div class="rectangle left-bottom"></div>
+     <!--       <p class="uppercase-paragraph">listen our latest podcasts</p>
+          -->          <div class="rectangle left-bottom"></div>
             <div class="rectangle right-top"></div>
             <div class="rectangle right-bottom"></div>
             <div class="rectangle left"></div>
           </div>
           <div class="podcasts-title-wrapper">
             <h2 data-w-id="968f98d1-63f6-4cf3-05bb-1547137a6eed" style="opacity:0" class="podcast-title">Giving up is simply not an option<span class="brand-color-span">.</span></h2>
-            <a href="#" data-w-id="41d8d768-f5ab-92b6-dc3d-45826d9087eb" style="background-color:rgb(199,248,73);opacity:0" class="button-with-icon w-inline-block w-lightbox">
+            <!--<a href="#" data-w-id="41d8d768-f5ab-92b6-dc3d-45826d9087eb" style="background-color:rgb(199,248,73);opacity:0" class="button-with-icon w-inline-block w-lightbox">
               <h6 style="color:rgb(14,14,14)" class="button-text">Listen Podcasts</h6><img src="images/play-1.svg" loading="lazy" style="filter:invert(0%)" alt="Play Icon" class="play-icon">
               <script type="application/json" class="w-json">{
   "items": [
@@ -546,7 +548,9 @@
     }
   ],
   "group": ""
-}</script>
+}
+-->
+</script>
             </a>
           </div>
         </div>
@@ -556,6 +560,7 @@
       <div class="absolute-photo-wrapper"></div>
     </div>
   </section>
+ <!--
   <section class="video-section">
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div class="section-title-wrapper">
@@ -643,7 +648,7 @@
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div data-w-id="7eda84b2-635e-a3d1-b82c-3821297afeda" style="opacity:0" class="achievement-wrapper">
         <h2 id="w-node-a748abbe-3dbd-3b7a-ba0d-bf1565492f02-1c86bff2">Club achievement make the history<span class="brand-color-span">.</span></h2>
-        <p data-text-content="Undefeated has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination." id="w-node-ec27e4cb-ddf9-a6e4-52ff-2381c73e9797-1c86bff2" class="paragraph-large achievement-paragraph">Undefeated has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
+        <p data-text-content="Sports Vision has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination." id="w-node-ec27e4cb-ddf9-a6e4-52ff-2381c73e9797-1c86bff2" class="paragraph-large achievement-paragraph">Sports Vision has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
       </div>
       <div class="achievement-photos-wrapper">
         <div class="achievement-photos">
@@ -676,7 +681,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
   <section class="home-section about-us-section">
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div data-w-id="63701d18-8c57-2639-d6cb-4a2b9f1deb73" style="opacity:0" class="full-screen-wrapper">
@@ -730,6 +735,7 @@
       </div>
     </div>
   </section>
+  <!--
   <section class="home-page-section product-section">
     <div class="w-layout-blockcontainer full-width-container w-container">
       <div data-w-id="8e9a4808-c18d-a36d-b782-5bad76293d6f" style="opacity:0" class="full-screen-wrapper">
@@ -834,7 +840,7 @@
     <div class="w-layout-blockcontainer base-container w-container">
       <div class="separator-block"></div>
     </div>
-  </div>
+  </div>-->
   <section class="form-section">
     <div data-w-id="0d362485-eaed-b089-6074-37687a1e4c3d" style="opacity:0" class="w-layout-blockcontainer base-container w-container">
       <div class="form-wrapper">
@@ -917,5 +923,14 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/update-nav.js" type="text/javascript"></script>
   <script src="js/stagewise-integration.js" type="text/javascript"></script>
+  <script src="js/brand-name-replacer.js" type="text/javascript"></script>
+
+  <script src="js/hide-menu-items.js" type="text/javascript"></script>
+  <script src="js/cors-proxy.js" type="text/javascript"></script>
+  <script src="js/team-logos.js" type="text/javascript"></script>
+  <script src="js/matches-cache.js" type="text/javascript"></script>
+  <script src="js/live-matches.js" type="text/javascript"></script>
+
+
 </body>
 </html>
