--- a/home-2.html
+++ b/home-2.html
@@ -617,7 +617,7 @@
     <div class="w-layout-blockcontainer base-container achievements-container w-container">
       <div class="achievement-text-wrapper">
         <p data-w-id="b92e7b33-3c89-776b-07f3-411ddc9d78fa" style="opacity:0" class="uppercase-paragraph dark-brand-color">CLUB ACHIEVEMENTS</p>
-        <p data-text-content="Undefeated has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination." data-w-id="5e361c14-1060-05b4-5edf-2bae0540f28f" style="opacity:0" class="paragraph-large gray-text">Undefeated has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
+        <p data-text-content="Sports Vision has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination." data-w-id="5e361c14-1060-05b4-5edf-2bae0540f28f" style="opacity:0" class="paragraph-large gray-text">Sports Vision has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
       </div>
       <div class="achievement-table">
         <div class="achievement-cell-wrapper"><img src="images/reward.svg" loading="lazy" style="opacity:0" data-w-id="3bd6ffb0-f5b1-5f88-1280-bcea60d1629d" alt="" class="achievement-icon">
@@ -809,5 +809,12 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/update-nav.js" type="text/javascript"></script>
   <script src="js/stagewise-integration.js" type="text/javascript"></script>
+
+  <script src="js/brand-name-replacer.js" type="text/javascript"></script>
+
+
+  <script src="js/hide-menu-items.js" type="text/javascript"></script>
+
+
 
 </body></html>
