--- a/our-ownership.html
+++ b/our-ownership.html
@@ -247,7 +247,7 @@
     <div class="w-layout-blockcontainer base-container achievements-container w-container">
       <div class="achievement-text-wrapper">
         <p data-w-id="b8008694-01d4-d573-d14c-721c6672c004" style="opacity:0" class="uppercase-paragraph brand-color-paragraph">CLUB ACHIEVEMENTS</p>
-        <p data-text-content="Undefeated has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination." data-w-id="b8008694-01d4-d573-d14c-721c6672c006" style="opacity:0">Undefeated has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
+        <p data-text-content="Sports Vision has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination." data-w-id="b8008694-01d4-d573-d14c-721c6672c006" style="opacity:0">Sports Vision has consistently etched its name in the annals of sporting history. Since its inception, our club has been a beacon of inspiration, fostering a legacy built on dedication, resilience, and unwavering determination.</p>
       </div>
       <div class="achievement-table">
         <div class="achievement-cell-wrapper"><img src="images/reward.svg" loading="lazy" style="opacity:0" data-w-id="b8008694-01d4-d573-d14c-721c6672c00a" alt="" class="achievement-icon">
@@ -388,5 +388,10 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/update-nav.js" type="text/javascript"></script>
   <script src="js/stagewise-integration.js" type="text/javascript"></script>
+  <script src="js/brand-name-replacer.js" type="text/javascript"></script>
+
+  <script src="js/hide-menu-items.js" type="text/javascript"></script>
+
+
 </body>
 </html>
