--- a/coming-soon.html
+++ b/coming-soon.html
@@ -60,5 +60,10 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/update-nav.js" type="text/javascript"></script>
   <script src="js/stagewise-integration.js" type="text/javascript"></script>
+  <script src="js/brand-name-replacer.js" type="text/javascript"></script>
+
+  <script src="js/hide-menu-items.js" type="text/javascript"></script>
+
+
 </body>
 </html>
