--- a/contact-us.html
+++ b/contact-us.html
@@ -382,5 +382,10 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/update-nav.js" type="text/javascript"></script>
   <script src="js/stagewise-integration.js" type="text/javascript"></script>
+  <script src="js/brand-name-replacer.js" type="text/javascript"></script>
+
+  <script src="js/hide-menu-items.js" type="text/javascript"></script>
+
+
 </body>
 </html>
